fix: update icon display style to flex for better alignment

--- a/src/components/common/Icon/Icon.module.scss
+++ b/src/components/common/Icon/Icon.module.scss
@@ -2,7 +2,9 @@
 @use "@/styles/typography";
 
 .icon {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   vertical-align: middle;
   width: 24px;
   height: 24px;
